| Bug #16435 | Events: Weekly events execute every second | ||
|---|---|---|---|
| Submitted: | 12 Jan 2006 4:35 | Modified: | 26 Jan 2006 2:30 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: SP | Severity: | S3 (Non-critical) |
| Version: | 5.1.6-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Andrey Hristov | Target Version: | |
[12 Jan 2006 6:18]
Aleksey Kishkin
tested on slackware and was not able to reproduce it. Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 2 to server version: 5.1.6-alpha Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql> create event e_50 on schedule every 1 week do insert into db1.t_50 values (current_timestamp); Query OK, 1 row affected (0.00 sec) mysql> set global event_scheduler = 1; Query OK, 0 rows affected (0.00 sec) mysql> select * from t_50; Empty set (0.00 sec) mysql> select * from t_50; Empty set (0.00 sec) mysql> select * from t_50; Empty set (0.00 sec)
[12 Jan 2006 16:57]
Andrey Hristov
SuSE 9.3
[16 Jan 2006 14:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1140
[18 Jan 2006 19:46]
Andrey Hristov
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1292
[23 Jan 2006 16:51]
Andrey Hristov
Fixed in 5.1.6, though the bug was in a unreleased version so probably no need to appear in the Changelog
[26 Jan 2006 2:30]
Mike Hillyer
Documented in 5.1.6 changelog:
<listitem>
<para>
Interval type was ignored in a <literal>CREATE EVENT</literal>
statement. (Bug #16435)
</para>
</listitem>

Description: I make an event which should execute EVERY 1 WEEK. I look in mysql.event, I see interval_field is WEEK. But execution is every 1 second. How to repeat: mysql> create table t_50 (s1 timestamp); Query OK, 0 rows affected (0.01 sec) mysql> create event e_50 on schedule every 1 week -> do insert into db1.t_50 values (current_timestamp); Query OK, 1 row affected (0.00 sec) mysql> set global event_scheduler = 1; Query OK, 0 rows affected (0.00 sec) mysql> select * from t_50; +---------------------+ | s1 | +---------------------+ | 2006-01-11 20:09:18 | | 2006-01-11 20:09:19 | | 2006-01-11 20:09:20 | | 2006-01-11 20:09:21 | | 2006-01-11 20:09:22 | | 2006-01-11 20:09:23 | | 2006-01-11 20:09:24 | | 2006-01-11 20:09:25 | +---------------------+ 8 rows in set (0.00 sec)