- fix bug #16435 (Weekly events execute every second) (WL#1034 Internal CRON) Before the interval expression was considered to be in seconds, now it is just a number and the type of interval is considered.

- this changeset introduces also fix for bug#16432 (Events: error re interval
  misrepresents the facts)
  the code of event_timed::set_interval() was refactored anyway so it is meaningful to
  fix the bug in the same changeset.